call get(0) instead of getFirst() to improve compatibility with older versions of Java